tests/baselines/reference/MemberFunctionDeclaration3_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts(2,4): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts (2 errors) ====
    class C {
       *[foo]() { }
       ~
!!! error TS9001: Generators are not currently supported.
        ~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }